# seraphine

./: Cargo.toml  README.md
examples/: adder.sr  closures.sr  features.sr  gcd.sr  greet.sr  sudoku.sr  unnamed_functions.sr
seraphine/: Cargo.toml
seraphine-cli/: Cargo.toml
seraphine-cli/src/: actions.rs  common.rs  error.rs  main.rs  option_parser.rs  repl.rs
seraphine-core/: Cargo.toml
seraphine-core/src/: bytecode.rs  codegen.rs  common.rs  error.rs  eval.rs  io.rs  lib.rs  macros.rs  parser.rs  tokenizer.rs  value.rs  vm.rs
seraphine-core/src/bytecode/: deserialize.rs  mod.rs  serialize.rs
seraphine-core/src/runtime/: common.rs
seraphine-core/src/stdlib/: functions.rs  mod.rs
seraphine-core/tests/: example-tests.rs
seraphine-core/tests/common/: mod.rs
seraphine-core/tests/integration_tests/: arithmetic.rs  control_flow.rs  functions.rs  list.rs  mod.rs  multiline.rs  object.rs  stdlib.rs  string.rs
seraphine/src/: main.rs  repl.rs
src/: common.rs  error.rs  eval.rs  io.rs  lib.rs  main.rs  parser.rs  repl.rs  tokenizer.rs
